# rig-augmented-canvas

./: README.md  main.js  manifest.json  styles.css
pkg/: package.json  rig_augmented_canvas.d.ts  rig_augmented_canvas.js  rig_augmented_canvas_bg.wasm  rig_augmented_canvas_bg.wasm.d.ts
rig-augmented-canvas/: .gitignore  Cargo.toml  INSTALLATION.md  README.md  fix-wasm-config.js  fix-wasm-paths.js  main.js
rig-augmented-canvas/backend/: Cargo.toml  README.md
rig-augmented-canvas/backend/src/: main.rs  models.rs  rig_service.rs
rig-augmented-canvas/docs/: BUGFIX-WebAssembly-Response-Handling.md
rig-augmented-canvas/plugin/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  tsconfig.json  version-bump.mjs  worker-wrapper.js  worker.d.ts  worker_bg.wasm  worker_bg.wasm.d.ts
rig-augmented-canvas/plugin/src/: api.ts  canvas_patches.ts  canvas_utils.ts  main.ts  obsidian.d.ts  settings.ts  types.ts  wasm_api.ts  worker.d.ts
rig-augmented-canvas/plugin/src/ui/: custom_question_modal.ts  floating_action_button.ts  loading_indicator.ts  multi_node_prompt_modal.ts  questions_modal.ts  user_guide_modal.ts
rig-augmented-canvas/plugin/worker/: worker.js
rig-augmented-canvas/src/: lib.rs  models.rs  obsidian.rs
rig-augmented-canvas/worker/: Cargo.toml
rig-augmented-canvas/worker/src/: lib.rs  models.rs
