[package]
name = "rig-augmented-canvas"
version = "0.1.0"
authors = ["Tachi"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
console_error_panic_hook = { version = "0.1.7", optional = true }
rig-core = { version = "0.10.0", features = ["worker"] }

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
